added about people

--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
+
+        /* New CSS for Hosts Section */
+        .hosts {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        .hosts h3 {
+            font-size: 1.6rem;
+            margin-bottom: 1rem;
+        }
+        .hosts .host {
+            margin-bottom: 1.5rem;
+        }
+        .hosts .host h4 {
+            font-size: 1.4rem;
+            margin-bottom: 0.5rem;
+        }
+        .hosts .host p {
+            font-size: 1.1rem;
+        }
         /* Responsive adjustments */
         @media (max-width: 600px) {
             header h1 {
@@ -150,6 +170,18 @@
             Nowa Fan is a podcast designed for attendees who want a quick and engaging rundown before the game.
             Whether you’re a seasoned fan or just starting out, our short episodes will equip you with the insights to talk like a true fan.
         </p>
+    </section>
+
+    <section class="hosts">
+        <h3>Meet the Hosts</h3>
+        <div class="host">
+            <h4>Tyler</h4>
+            <p>Tyler is an 11-year-old sports nut with ambitions to be a sports announcer.</p>
+        </div>
+        <div class="host">
+            <h4>Fiona</h4>
+            <p>Fiona (7) is no stranger to sports, playing lacrosse, soccer, gymnastics, and dance.</p>
+        </div>
     </section>
 
     <section class="contact">
