--- a/index.html
+++ b/index.html
@@ -129,16 +129,18 @@
 </head>
 <body>
 <header>
-    <h1>Nowa Fan</h1>
+    <img src="/images/now-a-fan.png" alt="Nowa Fan Logo" style="max-width: 150px; height: auto;" />
+    <h1>Now (you're) A Fan</h1>
     <p>Your quick guide to getting game ready!</p>
 </header>
 
 <div class="container">
     <section class="hero">
-        <h2>Welcome to Nowa Fan</h2>
+        <h2>Welcome to Now A Fan</h2>
         <p>
             If you're headed to a sporting event but haven't kept up with the latest,
-            you're in the right place. Our podcast gives you the essential rundown on key players, major storylines, and historical rivalries so you can join in the conversation confidently.
+            you're in the right place. Our podcast gives you the essential rundown on key players, major storylines, and
+            historical rivalries so you can join in the conversation confidently. <strong> Now you're a fan!</strong>
         </p>
     </section>
 
