--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <div class="container">
     <section class="hero">
-        <h2>Welcome to Now A Fan</h2>
+        <h2>Welcome to Now (you're) A Fan</h2>
         <p>
             If you're headed to a sporting event but haven't kept up with the latest,
             you're in the right place. Our podcast gives you the essential rundown on key players, major storylines, and
@@ -147,11 +147,14 @@
     <section class="episodes">
         <h3>Latest Episode</h3>
         <article>
-            <h4>Episode 1: Super Bowl Kickoff</h4>
+            <h4>Episode 1: Super Bowl LIX Preview - Now (you're) a Fan</h4>
             <p>
-                A concise briefing on the top players, game-changing moments, and the background you need for this year's Super Bowl.
+                Everything you need to know to chat it up at the big game this year.
             </p>
-            <p><a href="#">Listen Now</a></p>
+            <audio controls>
+                <source src="/audio/NowAFan-ep1-superbowl.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
         </article>
         <!-- Add additional episodes as needed -->
     </section>
