--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="/images/now-a-fan.png" alt="Nowa Fan Logo" style="max-width: 150px; height: auto;" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nowa Fan | Get Game Ready</title>
@@ -162,10 +163,12 @@
     <section class="subscribe">
         <h3>Subscribe</h3>
         <p>Never miss an episode – subscribe on your favorite platform:</p>
+        <br/>
         <p>
             <a href="#">Apple Podcasts</a>
             <a href="#">Spotify</a>
             <a href="#">Google Podcasts</a>
+            <a href="/rss.xml">RSS Feed</a>
         </p>
     </section>
 
