--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nowa Fan | Get Game Ready</title>
+    <title>Now (you're) A Fan | Get Game Ready</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVNNN43YVB"></script>
     <script>
@@ -174,7 +174,7 @@
         <br/>
         <p>
             <a href="#">Apple Podcasts</a>
-            <a href="#">Spotify</a>
+            <a href="https://open.spotify.com/show/4SMFeJLna0u9F8qHV075fX?si=JktWGo73SGCGZsxuzDZrkQ">Spotify</a>
             <a href="#">Google Podcasts</a>
             <a href="/rss.xml">RSS Feed</a>
         </p>
