--- a/index.html
+++ b/index.html
@@ -173,9 +173,8 @@
         <p>Never miss an episode – subscribe on your favorite platform:</p>
         <br/>
         <p>
-            <a href="#">Apple Podcasts</a>
+            <a href="#">Apple Podcasts (Coming soon!)</a>
             <a href="https://open.spotify.com/show/4SMFeJLna0u9F8qHV075fX?si=JktWGo73SGCGZsxuzDZrkQ">Spotify</a>
-            <a href="#">Google Podcasts</a>
             <a href="/rss.xml">RSS Feed</a>
         </p>
     </section>
