--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     </section>
 
     <section class="about">
-        <h3>About Nowa Fan</h3>
+        <h3>About Now A Fan</h3>
         <p>
-            Nowa Fan is a podcast designed for attendees who want a quick and engaging rundown before the game.
+            Now A Fan is a podcast designed for attendees who want a quick and engaging rundown before the game.
             Whether you’re a seasoned fan or just starting out, our short episodes will equip you with the insights to talk like a true fan.
         </p>
     </section>
@@ -199,16 +199,11 @@
         </div>
     </section>
 
-    <section class="contact">
-        <h3>Contact Us</h3>
-        <p>Have feedback or questions? <a href="mailto:info@nowafan.com">Email us</a>.</p>
-    </section>
-
-    <p class="tagline">now your a fan, go chat like one!</p>
+    <p class="tagline">Now you're a fan, go chat like one!</p>
 </div>
 
 <footer>
-    <p>&copy; 2025 Nowa Fan. All Rights Reserved.</p>
+    <p>&copy; 2025 Now A Fan. All Rights Reserved.</p>
 </footer>
 </body>
 </html>
